--- a/Site/InSync.html
+++ b/Site/InSync.html
@@ -17,7 +17,7 @@
             </article>
         </header>
         <section class="games-list">
-            <h2>Commited games:</h2>
+            <h2>Game List:</h2>
             <ol>
                 <li>JokenPo</li>
                 <li>Snake Game</li>
