--- a/Site/InSync.html
+++ b/Site/InSync.html
@@ -13,7 +13,7 @@
             <article class="header-content">
                 <h1>InSync Games</h1>
                 <p>Independent game development</p>
-                <p><strong>Repository:</strong> <a href="https://github.com/Vitoria-personal/InSinc-Games">https://Vitoria-personal.github.io/InSinc-Games</a></p>
+                <p><strong>Repository:</strong> <a href="https://github.com/Vitoria-personalhub/InSinc-Games.git">https://Vitoria-personal.github.io/InSinc-Games</a></p>
             </article>
         </header>
         <section class="games-list">
