--- a/Site/AC-Milan-Games.html
+++ b/Site/AC-Milan-Games.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>InSync Games</title>
-    <!-- Link para o arquivo CSS -->
+    <title>Ac Milan Games</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main class="container">
         <header>
-            <article class="header-content">
-                <h1>InSync Games</h1>
+            <div class="header-content">
+                <div class="header-image-container">
+                    <img src="Images/AC Milan.png" alt="AC Milan Image">
+                </div>
                 <p>Independent game development</p>
-                <p><strong>Repository:</strong> <a href="https://github.com/Vitoria-personalhub/InSinc-Games.git">https://Vitoria-personal.github.io/InSinc-Games</a></p>
-            </article>
+                <p><strong>Repository:</strong> 
+                    <a href="https://github.com/Vitoria-personalhub/InSinc-Games">https://github.com/Vitoria-personalhub/AC-Milan-Games.git</a>
+                </p>
+            </div>
         </header>
+
         <section class="games-list">
-            <h2>Game List:</h2>
+            <h2>Committed games:</h2>
             <ol>
-                <li>JokenPo</li>
-                <li>Snake Game</li>
+                <li>JokenPo <img class="right" src="Images/scissor.png" alt="JokenPo"></li>
+                <li>Snake Game <img class="right" src="Images/snake.png" alt="Snake Game"></li>
             </ol>
         </section>
     </main>
